2003-04-02  Vladimir Makarov  <vmakarov@redhat.com>

	* config/rs6000/rs6000.c
	(TARGET_SCHED_FIRST_CYCLE_MULTIPASS_DFA_LOOKAHEAD): Redefine the
	macros.
	(rs6000_issue_rate): Add case for 8540.
	(rs6000_use_sched_lookahead): New function.

	* config/rs6000/8540.md: Rename SIU units into SU ones and MIU
	units into MU ones.
	(ppc8540_branch, ppc8540_cr_logical): Add one cycle in the
	reservation before retirement.
	(ppc8540_multiply, ppc8540_load, ppc8540_store,
	ppc8540_simple_float, ppc8540_vector_load, ppc8540_vector_store):
	Remove additional cycle in the reservation before retirement.
	(ppc8540_mfcr, ppc8540_mtcrf, ppc8540_mtjmpr): Add missed
	reservation of ppc8540_issue.
	
2003-04-02  Andreas Schwab  <schwab@suse.de>

	* real.c (decode_ieee_single): Fix decoding of SNaN bit.

2003-04-01  Richard Henderson  <rth@redhat.com>

        * except.c (convert_from_eh_region_ranges_1): Smash REG_EH_REGION
        notes for nothrow calls if flag_forced_unwind_exceptions.
        (build_post_landing_pads): Mind flag_forced_unwind_exceptions.
        (sjlj_find_directly_reachable_regions): Likewise.
        (reachable_handlers): Likewise.
        (can_throw_external): Likewise.
        (collect_one_action_chain): Record cleanups after catch-all and
        must-not-throw if flag_forced_unwind_exceptions.
        * flags.h (flag_forced_unwind_exceptions): Declare.
        * toplev.c (flag_forced_unwind_exceptions): New.
        (lang_independent_options): Add it.
	* doc/invoke.text: Add it.

2003-04-01  David Mosberger <davidm@hpl.hp.com>

        * config/ia64/crti.asm: Clean up trailing whitespace.
        Remove trailing hashes (#) from identifiers.

        * config/ia64/crtn.asm: Ditto.

        * config/ia64/crtend.asm: Remove trailing hashes (#) from
        identifiers.
        (__do_global_ctors_aux): Align to 32-byte boundary.  Add unwind
        directives.  Drop explicit bundling---it just makes the code